--- a/homework/Python 300.ipynb
+++ b/homework/Python 300.ipynb
@@ -3998,51 +3998,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e9942752-9ea9-4967-8fc6-1e32566e8e53",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가\n",
+      "나\n",
+      "다\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 175 my_list를 아래와 같이 출력하라.\n",
+    "\n",
+    "my_list = [\"가\", \"나\", \"다\", \"라\"]\n",
+    "for i in [0, 1, 2] :\n",
+    "    print(my_list[i])"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2a0986c-dbec-4861-9f1e-da0aa5a62b04",
+   "cell_type": "markdown",
+   "id": "c11596f3-4134-4a8a-8a64-88c3e56a86ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "단계별로 출력해보기\n",
+    "for 구문 range (범위)를 통해 숫자를 반복함\n",
+    "for i in range(0, 10, 2) 범위 0부터 10까지 2(step, 거리)씩 출력\n",
+    "for i in [ ] 열거형 타입에 있는 값을 하나부터 끝까지 탐"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4441ebeb-dd1f-4d37-ba34-9a6f279619cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 나\n",
+      "나 다\n",
+      "다 라\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [0, 1, 2]:\n",
+    "    print(my_list[i], my_list[i+1])"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a580a3cd-2a1a-466a-8f32-5bf0a1f8b0c6",
+   "cell_type": "markdown",
+   "id": "1bdb5c1d-576b-4a80-b7ec-af3428e4573b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "for i in [0, 1, 2]:\n",
+    "    print(my_list[i], my_list[i+1])\n",
+    "\n",
+    "    -> 0 1 2 왼쪽 가나다에 대한 범위 입력, i+1은 오른쪽 나다라의 값"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "370acc86-f1f9-48a3-a823-bdeee489d5f0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 나\n",
+      "나 다\n",
+      "다 라\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range( len(my_list) - 1 ) :\n",
+    "  print(my_list[i], my_list[i+1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90e6c237-874b-497e-9764-a0b2671dde3e",
+   "execution_count": 18,
+   "id": "1e5955f1-7ce8-4e7c-8173-ef4b08c7c4ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 다\n",
+      "나 라\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 추가 테스트\n",
+    "for i in [0, 1]:\n",
+    "    print(my_list[i], my_list[i+2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "048c00d8-b2b9-41d4-ac6e-483ec77328a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 나\n",
+      "나 다\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 추가 테스트\n",
+    "for i in [0, 1]:\n",
+    "    print(my_list[i], my_list[i+1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61c3b914-31c1-4807-9e38-19b22a73d7a8",
+   "metadata": {},
+   "source": [
+    "len 함수는 리스트나 문자열의 길이를 숫자로 변환하는 함수\n",
+    "len(괄호안에 길이를 알고 싶은 텍스트 삽입)\n",
+    "i를 반복하는데 범위는 (내 리스트 길이 -1)이야"
+   ]
   },
   {
    "cell_type": "code",
@@ -4050,15 +4142,35 @@
    "id": "7b3e61f9-c448-4547-87d0-1fb803fc1a71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#176 리스트를 아래와 같이 출력하라.\n",
+    "# my_list = [\"가\", \"나\", \"다\", \"라\", \"마\"]\n",
+    "# 가 나 다\n",
+    "# 나 다 라\n",
+    "# 다 라 마"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "293db792-b56c-423e-a128-a3e16e342466",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가 나 다\n",
+      "나 다 라\n",
+      "다 라 마\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"가\", \"나\", \"다\", \"라\", \"마\"]\n",
+    "for i in [0, 1, 2]:\n",
+    "    print(my_list[i], my_list[i+1], my_list[i+2])"
+   ]
   },
   {
    "cell_type": "code",
@@ -4066,15 +4178,36 @@
    "id": "a7734aae-3ef4-43dc-9dc3-bf57c5af6b29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 177 반복문과 range 함수를 사용해서 my_list를 아래와 같이 출력하라.\n",
+    "\n",
+    "# my_list = [\"가\", \"나\", \"다\", \"라\"]\n",
+    "# 라 다\n",
+    "# 다 나\n",
+    "# 나 가"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "71e86650-a6e0-4cb3-9ded-2e18b279388d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "라 다\n",
+      "다 나\n",
+      "나 가\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"가\", \"나\", \"다\", \"라\"]\n",
+    "for i in [3, 2, 1]:\n",
+    "    print(my_list[i], my_list[i-1])"
+   ]
   },
   {
    "cell_type": "code",
@@ -4082,20 +4215,623 @@
    "id": "45c69878-7cb0-4a7a-b1db-a8bca1b34b7b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 178\n",
+    "# 리스트에는 네 개의 정수가 저장되어 있다. 각각의 데이터에 대해서 자신과 우측값과의 차분값을 화면에 출력하라."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "4da52a99-e6a3-480d-acd5-be991b8bc6cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [100, 200, 400, 800]\n",
+    "for i in [0, 1, 2]:\n",
+    "    print(abs(my_list[i+1] - my_list[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2ccc804a-4937-42b5-9fd4-70847c72455f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "200\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# abs: 절대값을 구할수 있는 절대값 함수\n",
+    "\n",
+    "# 다른 방식\n",
+    "for i in range(0, 3):\n",
+    "    print(my_list[i+1] - my_list[i])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b44dc8-44f6-4ab8-a83e-9828914539de",
+   "id": "d087a0ea-abf8-49cc-8217-a8cd47590bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 179\n",
+    "# 리스트에는 6일 간의 종가 데이터가 저장되어 있다. 종가 데이터의 3일 이동 평균을 계산하고 이를 화면에 출력하라.\n",
+    "\n",
+    "# my_list = [100, 200, 400, 800, 1000, 1300]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ec4505ef-7f52-4dfd-aae0-b6c52ea12849",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "233.33333333333334\n",
+      "466.6666666666667\n",
+      "733.3333333333334\n",
+      "1033.3333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [100, 200, 400, 800, 1000, 1300]\n",
+    "\n",
+    "for i in [1, 2, 3, 4]: # 아래로 차곡차곡 쌓이는 리스\n",
+    "    print(abs(my_list[i-1] + my_list[i] + my_list[i+1]) / 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e566760f-706e-4158-bbdc-42e447553a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 180\n",
+    "# 리스트에 5일간의 저가, 고가 정보가 저장돼 있다. 고가와 저가의 차를 변동폭이라고 정의할 때, low, high 두 개의 리스트를 사용해서 5일간의 변동폭을 volatility 리스트에 저장하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e4f8bffe-6b41-4618-88ff-ea6abc2c471f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 100, 30, 80, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "low_prices  = [100, 200, 400, 800, 1000]\n",
+    "high_prices = [150, 300, 430, 880, 1000]\n",
+    "\n",
+    "volatility = []\n",
+    "for i in range(len(low_prices)) :\n",
+    "    volatility.append(high_prices[i] - low_prices[i])\n",
+    "\n",
+    "print(volatility)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8510e468-ec59-4f1b-b3d7-b78d175a074e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 100, 30, 80, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "volatility = [] # 리스트 생성 (저장하기 위해서)\n",
+    "for i in range(5):\n",
+    "    diff = high_prices[i] - low_prices[i]\n",
+    "    volatility.append(diff) # 리스트.append (리스트에 값 저장)\n",
+    "\n",
+    "print(volatility)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ccd71f9-b94f-4522-940c-58095b34ee6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 181\n",
+    "# 아래 표에서 하나의 행을 하나의 리스트로, 총 3개의 리스트를 갖는 이차원 리스트 apart를 정의하라.\n",
+    "\n",
+    "# 101호\t102호\n",
+    "# 201호\t202호\n",
+    "# 301호\t302호"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "2e160978-376b-4ee2-8f37-f5ff603d4ebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['101호', '102호'], ['201호', '202호'], ['301호', '302호']]\n",
+      "['101호', '102호']\n"
+     ]
+    }
+   ],
+   "source": [
+    "apart = [ [\"101호\", \"102호\"], [\"201호\", \"202호\"], [\"301호\", \"302호\"] ] # 리스트 안에 리스트가 있는게 2차원 리스트55\n",
+    "print(apart)\n",
+    "print(apart[0]) # 리스트 안에 첫번째 항목"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab5b94bd-bcc0-4303-9ad5-43be321fbef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 182\n",
+    "# 아래 표에서 하나의 열을 하나의 리스트로, 총 2개의 리스트를 갖는 이차원 리스트 stock을 정의하라.\n",
+    "\n",
+    "# 시가\t종가\n",
+    "# 100\t80\n",
+    "# 200\t210\n",
+    "# 300\t330"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "a1c2f230-bc92-4205-bdff-a841bdafc001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['시가', 100, 200, 300], ['종가', 80, 210, 330]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = [ ['시가', 100, 200, 300], ['종가', 80, 210, 330] ]\n",
+    "print(stock)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "76599ee9-a2ab-4042-bb9a-d0415cbe9980",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'시가': [100, 200, 300], '종가': [80, 210, 330]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#183 아래 표를 stock 이름의 딕셔너리로 표현하라.시가를 key로 저장하고, 나머지 같은 열의 데이터를 리스트로 저장해서 value로 저장한다. \n",
+    "# 종가 역시 key로 저장하고 나머지 같은 열의 데이터를 리스트로 저장해서 value로 저장한다.\n",
+    "\n",
+    "stock = {\"시가\": [100, 200, 300], \"종가\": [80, 210, 330] }\n",
+    "print(stock)\n",
+    "\n",
+    "\n",
+    "# { } 딕셔너리 생성 \"시가\", \"종가\" 키, [ ] 리스트 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25eb6256-d431-4e70-bde5-0c9f235a4066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 184\n",
+    "# 아래 표를 stock 이라는 이름의 딕셔너리로 표현하라. 날짜를 key로 저장하고, 나머지 같은 행의 데이터를 리스트로 저장해서 value로 저장한다. 첫 열이 날짜이다.\n",
+    "\n",
+    "# 10/10\t80\t110\t70\t90\n",
+    "# 10/11\t210\t230\t190\t200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "42da69d1-9609-4cc9-9547-e22990fe542c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock = {\"10/10\": [80, 110, 70, 90], \"10/11\": [210, 230, 190, 200]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6e7b383e-b4d1-4570-aef2-3894161804bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[101, 102], [201, 202], [301, 302]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#185 리스트에 저장된 데이터를 아래와 같이 출력하라.\n",
+    "\n",
+    "apart = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "for i in [apart] :\n",
+    "    print(apart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d0d4f4b3-d62d-4a06-a463-83c921890f5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101, 102]\n",
+      "[201, 202]\n",
+      "[301, 302]\n"
+     ]
+    }
+   ],
+   "source": [
+    "apart = [ [101, 102], \n",
+    "          [201, 202], \n",
+    "          [301, 302] ]\n",
+    "for 층 in apart: # 층 = 리스트\n",
+    "    print(층)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "a52f8928-ecdc-4b08-b77c-3083a7fa62d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "102 호\n",
+      "201 호\n",
+      "202 호\n",
+      "301 호\n",
+      "302 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다른 풀이\n",
+    "\n",
+    "apart = [ [101, 102], \n",
+    "          [201, 202], \n",
+    "          [301, 302] ]\n",
+    "for 층 in apart: # 층 = 리스트\n",
+    "    for 집 in 층:  # 집 = 각 호수, 이중루프\n",
+    "        print(집, \"호\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4661a2f0-749e-4da6-ae70-8d124934136f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "102 호\n",
+      "201 호\n",
+      "202 호\n",
+      "301 호\n",
+      "302 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in apart:\n",
+    "    for col in row:\n",
+    "        print(col, \"호\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "5e4c84de-be82-45d7-aa6a-77e292f8128e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 186 리스트에 저장된 데이터를 아래와 같이 출력하라.\n",
+    "\n",
+    "# 301 호\n",
+    "# 302 호\n",
+    "# 201 호\n",
+    "# 202 호\n",
+    "# 101 호\n",
+    "# 102 호\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "96b60c04-82a1-40d9-baf3-d2baae02c203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "301 호\n",
+      "302 호\n",
+      "201 호\n",
+      "202 호\n",
+      "101 호\n",
+      "102 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in apart[::-1]:  # row 행, ::-1 슬라이싱하면 뒤집어짐\n",
+    "    for col in row:      # col 열\n",
+    "        print(col, \"호\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "424852d3-b1bb-49a2-866b-e67c2c4089eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 187 리스트에 저장된 데이터를 아래와 같이 출력하라.\n",
+    "\n",
+    "# 302 호\n",
+    "# 301 호\n",
+    "# 202 호\n",
+    "# 201 호\n",
+    "# 102 호\n",
+    "# 101 호"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "1d150aec-3042-4a20-a02c-bb5457902951",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "302 호\n",
+      "301 호\n",
+      "202 호\n",
+      "201 호\n",
+      "102 호\n",
+      "101 호\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in apart[::-1]:\n",
+    "    for col in row[::-1]:      \n",
+    "        print(col, \"호\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a46bb9f-5d6d-45d2-81bf-2fc038a1eaee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 188\n",
+    "# 리스트에 저장된 데이터를 아래와 같이 출력하라.\n",
+    "\n",
+    "# 101 호\n",
+    "# -----\n",
+    "# 102 호\n",
+    "# -----\n",
+    "# 201 호\n",
+    "# -----\n",
+    "# 202 호\n",
+    "# -----\n",
+    "# 301 호\n",
+    "# -----\n",
+    "# 302 호\n",
+    "# -----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "72df896a-0c6e-4c83-95a6-e76afec0e8a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "----\n",
+      "102 호\n",
+      "----\n",
+      "201 호\n",
+      "----\n",
+      "202 호\n",
+      "----\n",
+      "301 호\n",
+      "----\n",
+      "302 호\n",
+      "----\n"
+     ]
+    }
+   ],
+   "source": [
+    "apart = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "for row in apart: # row 행, col \n",
+    "    for col in row:\n",
+    "        print(col, \"호\")\n",
+    "        print(\"----\")       # 두번째 for문 수행시 print 두번 시행해라\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2d9485d0-30c3-417f-b4d2-3966f96d0e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "row 호\n",
+      "-----\n",
+      "row 호\n",
+      "-----\n",
+      "row 호\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in apart:\n",
+    "    print(\"row\", \"호\")\n",
+    "    print(\"-----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "b86dacb8-0cb9-4cf6-95c0-52075475e86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "102 호\n",
+      "----\n",
+      "201 호\n",
+      "202 호\n",
+      "----\n",
+      "301 호\n",
+      "302 호\n",
+      "----\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in apart:\n",
+    "    for col in row:\n",
+    "        print(col, \"호\")\n",
+    "    print(\"----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d3b15f-2d15-4728-946f-606a360e2605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 190\n",
+    "# 리스트에 저장된 데이터를 아래와 같이 출력하라.\n",
+    "\n",
+    "# apart = [ [101, 102], [201, 202], [301, 302] ]\n",
+    "\n",
+    "# 101 호\n",
+    "# 102 호\n",
+    "# 201 호\n",
+    "# 202 호\n",
+    "# 301 호\n",
+    "# 302 호\n",
+    "# -----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7b7d2c45-b380-439c-bf6f-f55843f65d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 호\n",
+      "102 호\n",
+      "201 호\n",
+      "202 호\n",
+      "301 호\n",
+      "302 호\n",
+      "----\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in apart:\n",
+    "    for col in row:\n",
+    "        print(col, \"호\")\n",
+    "        \n",
+    "print(\"----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9c6d0d1-ea34-49ae-a97b-c642c511cf0a",
    "metadata": {},
    "outputs": [],
    "source": []
