--- a/homework/Python 300.ipynb
+++ b/homework/Python 300.ipynb
@@ -4834,15 +4834,364 @@
    "id": "f9c6d0d1-ea34-49ae-a97b-c642c511cf0a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 191\n",
+    "# data에는 매수한 종목들의 OHLC (open/high/low/close) 가격 정보가 바인딩 되어있다.\n",
+    "\n",
+    "# data = [\n",
+    "#     [ 2000,  3050,  2050,  1980],\n",
+    "#     [ 7500,  2050,  2050,  1980],\n",
+    "#     [15450, 15050, 15550, 14900]\n",
+    "# ]\n",
+    "\n",
+    "# 수수료를 0.014 %로 가정할 때, 각 가격에 수수료를 포함한 가격을 한라인에 하나씩 출력하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9487a3ff-c307-4658-be6a-268e3052e875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000.28\n",
+      "3050.427\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "7501.05\n",
+      "2050.2870000000003\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "15452.163\n",
+      "15052.107\n",
+      "15552.177\n",
+      "14902.086000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [ 2000,  3050,  2050,  1980],\n",
+    "    [ 7500,  2050,  2050,  1980],\n",
+    "    [15450, 15050, 15550, 14900]\n",
+    "]\n",
+    "\n",
+    "for line in data:\n",
+    "    for column in line:\n",
+    "        print(column * 1.00014)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e5928677-1ea0-4b90-8b39-90d991d3538b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000.28\n",
+      "3050.427\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "----\n",
+      "7501.05\n",
+      "2050.2870000000003\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "----\n",
+      "15452.163\n",
+      "15052.107\n",
+      "15552.177\n",
+      "14902.086000000001\n",
+      "----\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in data:\n",
+    "    for column in line:\n",
+    "        print(column * 1.00014)\n",
+    "    print(\"----\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9487a3ff-c307-4658-be6a-268e3052e875",
+   "id": "ffad0523-b21a-4597-b7bb-958ffccc1c69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 193\n",
+    "# 192 번 문제의 결괏값을 result 이름의 리스트에 1차원 배열로 저장하라.\n",
+    "\n",
+    "# >> print(result)\n",
+    "# [2000.28, 3050.427, 2050.2870000000003, 1980.2772, 7501.05, 2050.2870000000003, 2050.2870000000003, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7d9b78f5-0fe5-44eb-be33-84162460fa14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000.28\n",
+      "3050.427\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "7501.05\n",
+      "2050.2870000000003\n",
+      "2050.2870000000003\n",
+      "1980.2772\n",
+      "15452.163\n",
+      "15052.107\n",
+      "15552.177\n",
+      "14902.086000000001\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'reslut' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m column \u001b[38;5;129;01min\u001b[39;00m line:\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(column \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1.00014\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(reslut)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'reslut' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for line in data:\n",
+    "    for column in line:\n",
+    "        print(column * 1.00014)\n",
+    "print(reslut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a57c11d7-770b-40f3-adcf-92e56cfd7734",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2000.28, 3050.427, 2050.2870000000003, 1980.2772, 7501.05, 2050.2870000000003, 2050.2870000000003, 1980.2772, 15452.163, 15052.107, 15552.177, 14902.086000000001]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for line in data:\n",
+    "    for column in line:\n",
+    "        result.append(column * 1.00014)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87bc77a5-ac99-4636-a95a-5ce146e1abd7",
+   "metadata": {},
+   "source": [
+    ".append 괄호( ) 안에 값을 입력하면 새로운 요소를 array 맨 끝에 객체로 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f990d495-7cf2-43c6-a1d8-5c1d9ac6f9d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 194\n",
+    "# 191번 문제의 결괏값을 result 이름의 리스트에 2차원 배열로 저장하라. 저장 포맷은 아래와 같다. 각 행에 대한 데이터끼리 리스트에 저장되어야 한다.\n",
+    "\n",
+    "# >> print(result)\n",
+    "# [\n",
+    "#  [2000.28, 3050.427, 2050.2870000000003, 1980.2772],\n",
+    "#  [7501.05, 2050.2870000000003, 2050.2870000000003, 1980.2772],\n",
+    "#  [15452.163, 15052.107, 15552.177, 14902.086000000001]\n",
+    "# ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "74ef6baa-ccb4-4cdf-a498-e3034a34a8c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2000.28, 3050.427, 2050.2870000000003, 1980.2772], [7501.05, 2050.2870000000003, 2050.2870000000003, 1980.2772], [15452.163, 15052.107, 15552.177, 14902.086000000001]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for line in data:\n",
+    "    sub = []\n",
+    "    for column in line:\n",
+    "        sub.append(column * 1.00014)\n",
+    "    result.append(sub)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80d0899f-fb70-44e6-8e78-00de615fc367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 195\n",
+    "# ohlc 리스트에는 시가(open), 고가 (high), 저가 (low) , 종가(close)가 날짜별로 저장돼 있다. 화면에 종가데이터를 출력하라.\n",
+    "\n",
+    "# ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "#         [100, 110, 70, 100],\n",
+    "#         [200, 210, 180, 190],\n",
+    "#         [300, 310, 300, 310]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd95bead-033a-418e-b101-6a412e20b2c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "190\n",
+      "310\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "for row in ohlc[1:]:\n",
+    "    print(row[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c475fd77-ed5e-4d37-b7f7-91c70bb552da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 196\n",
+    "# ohlc 리스트에는 시가(open), 고가 (high), 저가 (low) , 종가(close)가 날짜별로 저장돼 있다. 종가가 150원보다 큰경우에만 종가를 출력하라.\n",
+    "\n",
+    "# ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "#         [100, 110, 70, 100],\n",
+    "#         [200, 210, 180, 190],\n",
+    "#         [300, 310, 300, 310]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e60a3386-a910-45a4-96ca-66bb5aabc0c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190\n",
+      "310\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohlc = [[\"open\", \"high\", \"low\", \"close\"],\n",
+    "        [100, 110, 70, 100],\n",
+    "        [200, 210, 180, 190],\n",
+    "        [300, 310, 300, 310]]\n",
+    "\n",
+    "for row in ohlc[1:]:\n",
+    "    if (row[3] > 150):\n",
+    "        print(row[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b0c50dd-afc1-49a0-a6a8-823099ca28d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "310\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 198 ohlc 리스트에는 시가(open), 고가 (high), 저가 (low) , 종가(close)가 날짜별로 저장돼 있다. \n",
+    "# 고가와 저가의 차이를 변동폭으로 정의할 때 변동폭을 volatility 이름의 리스트에 저장하라.\n",
+    "\n",
+    "for row in ohlc[1:]:\n",
+    "    if (row[3] >= row[0]):\n",
+    "        print(row[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5a2bb751-f380-49c8-8962-11ffcf5b7535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 199 리스트에는 3일 간의 ohlc 데이터가 저장돼 있다. \n",
+    "# 종가가 시가보다 높은 날의 변동성 (고가 - 저가)을 화면에 출력하라.\n",
+    "\n",
+    "for row in ohlc[1:]:\n",
+    "    if row[3] > row[0]:\n",
+    "        print(row[1]-row[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5a4b261a-50ae-4171-89eb-f1916547d86a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 200 리스트에는 3일 간의 ohlc 데이터가 저장돼 있다. 시가에 매수해서 종가에 매도 했을 경우 총 수익금을 계산하라.\n",
+    "\n",
+    "profit = 0\n",
+    "for row in ohlc[1:]:\n",
+    "    profit += (row[3] - row[0])"
+   ]
   },
   {
    "cell_type": "code",
